--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "Finte State Machine for Reber Grammar   \n",
     "   \n",
-    "![Reber Grammar](reber.gif \"Reber Grammar\")"
+    "![Reber Grammar](Images/reber.gif \"Reber Grammar\")"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -73,7 +73,7 @@
    "source": [
     "Finite State Machine for Embedded Reber Grammar   \n",
     "   \n",
-    "![Embedded Reber Grammar](emb_reber.gif \"Embedded Reber Grammar\")"
+    "![Embedded Reber Grammar](Images/emb_reber.gif \"Embedded Reber Grammar\")"
    ],
    "cell_type": "markdown",
    "metadata": {}
